--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,15 +52,15 @@ plugins:
   - search
   - roamlinks
   - mkdocs-replace-markdown:
-      - patterns:
-          - replace_dead_links_left: "name"
-            url: ""
-            oldvalue: "[["
-            newvalue: ""
-          - replace_dead_links_right: "name"
-            url: ""
-            oldvalue: "]]"
-            newvalue: ""
+      patterns:
+        - replace_dead_links_left: "name"
+          url: ""
+          oldvalue: "[["
+          newvalue: ""
+        - replace_dead_links_right: "name"
+          url: ""
+          oldvalue: "]]"
+          newvalue: ""
   # - blog
   # - rss:
   #    match_path: blog/posts/.* 
