--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,6 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocs-roamlinks-plugin
       - run: pip install mkdocs-rss-plugin
-      - run: pip install mkdocs-replace-markdown
+      - run: pip install plugins/mkdocs-replace-markdown-0.2.0
       # - run: pip install mkdocs-mermaid2-plugin
       - run: mkdocs gh-deploy --force
